amend test: Pause main thread as well as worker

can't really say the DEBUG_SYNC is split now, only API compatible

also, it referenced the wrong commit & MDEV. should be MDEV-33327 (c75905cacb)